# SEM_Telemetry_Hub

./: LICENSE  README.md
DesktopApplication/TelemetryHub/: CMakeLists.txt  dataparser.cpp  dataparser.h  heatplot.cpp  main.cpp  serialMonitorWindow.qml  serialhandle.cpp  serialhandle.h  track.cpp  windowmanager.cpp
DesktopApplication/TelemetryHub/qml/Components/: OrbitVisualization.qml
DesktopApplication/TelemetryHub/qml/inc/: heatplot.h  track.h  windowmanager.h
DesktopApplication/TelemetryHub/qml/src/: dataparser.cpp  heatplot.cpp  serialhandle.cpp  track.cpp  windowmanager.cpp
DesktopApplication/build-TelemetryHub-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  apptelemetryhub_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
DesktopApplication/build-TelemetryHub-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
DesktopApplication/build-TelemetryHub-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appTelemetryHub.cmake  Qt6_QmlPlugins_Imports_appTelemetryHub.rsp
DesktopApplication/build-TelemetryHub-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
DesktopApplication/build-TelemetryHub-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.rcc/: appTelemetryHub_raw_qml_0.qrc  qmake_TelemetryHub.qrc  qrc_appTelemetryHub_raw_qml_0.cpp  qrc_qmake_TelemetryHub.cpp
DesktopApplication/build-TelemetryHub-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/TelemetryHub/: Main.qml  appTelemetryHub_qml_module_dir_map.qrc  qmldir
DesktopApplication/build-TelemetryHub-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/appTelemetryHub_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
DesktopApplication/build-TelemetryHub-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/meta_types/: appTelemetryHub_json_file_list.txt  appTelemetryHub_json_file_list.txt.timestamp  (+1 more)
(+566 files in other folders)
